--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
@@ -30,4 +30,24 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+/*--------------------------------*/
+/*App.css Component*/
+/*--------------------------------*/
+
+.App {
+  margin-right: 80%;
+  min-height: 100vh;
+  background-color: #5971f2;
+  color: #fff;
+  font-family: 'lato', 'arial', 'sans-serif';
+  font-weight: 600;
+}
+
+.Header {
+  padding-top: 20px;
+  padding-left: 20px;
+  font-size: 30px;
 }
